Bugfix: Alignwide core blocks

--- a/assets/sass/3-blocks/_blocks-core.scss
+++ b/assets/sass/3-blocks/_blocks-core.scss
@@ -44,6 +44,11 @@
 		margin-right: auto;
 		clear: both;
 		@include outer-margins;
+
+		.alignwide {
+			padding-left: 0 !important;
+			padding-right: 0 !important;
+		}
 	}
 
 	&.alignfull {
